feat: 更新nuget包;测试CentOS

--- a/src/Tests/ConsoleAppTest/ConsoleAppTest.csproj
+++ b/src/Tests/ConsoleAppTest/ConsoleAppTest.csproj
@@ -15,6 +15,8 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\Extensions\ViewFaceCore.Extension.SkiaSharp\ViewFaceCore.Extension.SkiaSharp.csproj" />
+		<ProjectReference Include="..\..\Extensions\ViewFaceCore.Extension.SystemDrawing\ViewFaceCore.Extension.SystemDrawing.csproj" />
+		<ProjectReference Include="..\..\Runtimes\ViewFaceCore.runtime.ubuntu.20.04.x64\ViewFaceCore.runtime.ubuntu.20.04.x64.csproj" />
 		<ProjectReference Include="..\..\Runtimes\ViewFaceCore.runtime.win.x64\ViewFaceCore.runtime.win.x64.csproj" />
 		<ProjectReference Include="..\..\ViewFaceCore\ViewFaceCore.csproj" />
 	</ItemGroup>
