--- a/src/Extensions/ViewFaceCore.Extension.SkiaSharp/ViewFaceCore.Extension.SkiaSharp.csproj
+++ b/src/Extensions/ViewFaceCore.Extension.SkiaSharp/ViewFaceCore.Extension.SkiaSharp.csproj
@@ -15,9 +15,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SkiaSharp" Version="2.88.2" />
-		<PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.2" />
-		<PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.2" />
+		<PackageReference Include="SkiaSharp" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.3" />
 	</ItemGroup>
 
 	<!--Project Reference-->
