--- a/src/ViewFaceCore/ViewFaceCore.csproj
+++ b/src/ViewFaceCore/ViewFaceCore.csproj
@@ -2,10 +2,10 @@
 
 	<!--Library Info-->
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;netcoreapp3.1;net5.0;net6.0;net7.0</TargetFrameworks>
 		<Platforms>AnyCPU;x86;x64</Platforms>
 		<Authors>View, WithSalt</Authors>
-		<Version>0.4.0-alpha2</Version>
+		<Version>0.4.0-alpha3</Version>
 		<OutputType>Library</OutputType>
 		<LangVersion>latest</LangVersion>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
