--- a/src/Extensions/ViewFaceCore.Extension.ImageSharp/ViewFaceCore.Extension.ImageSharp.csproj
+++ b/src/Extensions/ViewFaceCore.Extension.ImageSharp/ViewFaceCore.Extension.ImageSharp.csproj
@@ -21,9 +21,7 @@
 	<!--Project Reference-->
 	<ItemGroup>
 		<ProjectReference Include="..\..\ViewFaceCore\ViewFaceCore.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.Extension.SourceGenerators\ViewFaceCore.Extension.SourceGenerators.csproj"
-						  OutputItemType="Analyzer"
-						  ReferenceOutputAssembly="false"  />
+		<ProjectReference Include="..\ViewFaceCore.Extension.SourceGenerators\ViewFaceCore.Extension.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 	<!--Package Info-->
