--- a/src/Extensions/ViewFaceCore.Extension.SystemDrawing/ViewFaceCore.Extension.SystemDrawing.csproj
+++ b/src/Extensions/ViewFaceCore.Extension.SystemDrawing/ViewFaceCore.Extension.SystemDrawing.csproj
@@ -16,7 +16,7 @@
 
 	<!--Package Reference-->
 	<ItemGroup>
-		<PackageReference Include="System.Drawing.Common" Version="5.0.3" />
+		<PackageReference Include="System.Drawing.Common" Version="[5.0.3,5.0.3]" />
 	</ItemGroup>
 
 	<!--Project Reference-->
